--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,10 +1,11 @@
 .nav {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	/* border: solid .5px black; */
 	position: sticky;
 	top: 0px;
 	background-color: var(--bg_color);
+	z-index: 100;
 }
 
 .nav div {
